# JSONC

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-run-tests.yml
include/: json.h  json_array.h  json_assert.h  json_beautifier.h  json_boolean.h  json_definitions.h  json_minifier.h  json_null.h  json_number.h  json_object.h  json_primitive.h  json_string.h  json_value.h  json_visitor.h  njson.h
sample/: CMakeLists.txt  README.md  main.cpp
samples/beautifier/: CMakeLists.txt  README.md  example.json  main.cpp
samples/response-parser/: CMakeLists.txt  README.md  main.cpp
src/: json.cpp  json_beautifier.cpp  json_minifier.cpp  json_null.cpp  json_parser.cpp  json_parser.h  json_token_reader.h
tests/: json_array_tests.cpp  json_beautifier_tests.cpp  json_boolean_tests.cpp  json_dump_tests.cpp  json_null_tests.cpp  json_number_tests.cpp  json_object_tests.cpp  json_parser_malformed_json_tests.cpp  json_parser_tests.cpp  json_parser_valid_json_tests.cpp  json_valid_json_tests.cpp  nsjon_tests.cpp
tests/integration/: json_beautifier_tests.cpp  json_dump_tests.cpp  json_malformed_json_tests.cpp  json_minifier_tests.cpp  json_valid_json_tests.cpp  test_utils.h
tests/unit/: json_boolean_tests.cpp  json_object_tests.cpp  json_string_tests.cpp  json_token_reader_tests.cpp
